--- a/src/app/auth/common/common.component.css
+++ b/src/app/auth/common/common.component.css
@@ -15,7 +15,6 @@
     font-size: 3.5rem;
     font-weight: 800;
     background: linear-gradient(90deg, #0d6efd, #6610f2);
-    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-bottom: 20px;
   }
@@ -34,9 +33,9 @@
   }
 
   .modal-lg {
-    max-width: 80%;  /* Increases the modal width */
+    max-width: 80%;
   }
 
   .modal-content {
-    min-height: 400px; /* Increases the height of the modal */
+    min-height: 400px;
   }
