Second Changes in Common Dashboard

--- a/src/app/auth/common/common.component.html
+++ b/src/app/auth/common/common.component.html
@@ -14,12 +14,18 @@
     <h1>Learning Management System</h1>
     <hr>
     <p>
-      Welcome to your centralized platform for learning, collaboration, and progress tracking.
-      Our LMS is designed to simplify your academic journey with a clean interface and easy access to everything you need.
+      Welcome to your centralized platform for learning, collaboration, and performance tracking. 
+      Our Learning Management System is designed specifically for coaching environments, 
+      offering enrolled students access to curated notes, assignments, and quizzes in one place.
     </p>
     <p>
-      Whether you're a student or an instructor, enjoy seamless communication, organized resources, and productive learning—all in one place.
+      Whether you're a teacher or an admin, you can easily manage student enrollment, 
+      upload study materials, assign tasks, and monitor progress—ensuring a streamlined and 
+      effective learning experience.
     </p>
+    <div class="image">
+      
+    </div>
   </div>
 
   <div class="row text-center px-4 py-5 bg-white">
