Changes in Quries Icon Symbol

--- a/src/app/shared/admin-side-bar/admin-side-bar.component.html
+++ b/src/app/shared/admin-side-bar/admin-side-bar.component.html
@@ -51,7 +51,7 @@
         class="nav-link d-flex align-items-center text-dark" 
         routerLinkActive="active-link" 
         [routerLinkActiveOptions]="{ exact: true }">
-        <mat-icon aria-hidden="false" aria-label="Example Queries icon" fontIcon="quiz"></mat-icon>Queries
+        <mat-icon aria-hidden="false" aria-label="Example Queries icon" fontIcon="question_mark"></mat-icon>Queries
       </a>
     </li>
     <li class="nav-item mb-2">
