--- a/src/app/student/home/home.component.html
+++ b/src/app/student/home/home.component.html
@@ -14,4 +14,9 @@
       <h2>Upcoming Classes</h2>
       <p>2</p>
     </div>
+    <div class="card">
+      <div class="icon"><i class="fas fa-book-open"></i></div>
+      <h2>Quries Reply</h2>
+      <p>Pending...</p>
+    </div>
   </div>
